# WitcherSeamless

./: .clang-format-ignore  .clang-tidy  .gitignore  CLAUDE.md  CMakePresets.json  CleanAndDeploy.bat  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_PRIMITIVES.md  GEMINI.md  INTEGRATION.md  LINUX_STEAMDECK.md  Launch_W3MP.bat  NARRATIVE_SYNC.md  PROJECT_OVERVIEW.md  README.md  STRESS_TEST.md  r4game_config  scripts_mod  scripts_redkit
.claude/: settings.local.json
.github/workflows/: build.yml
.windsurf/rules/: 01-core-architecture.md
data/scripts/local/: W3M_Core.ws  W3mDebugMonitor.ws  w3mp.ws  w3mp_final.ws  w3mp_refactored.ws
src/client/: CMakeLists.txt  asi_loader_entry.cpp  w3m_logger.h
src/client/module/: input_manager.cpp  input_manager.hpp  network.cpp  network.hpp  quest_sync.cpp  quest_sync.hpp  renderer.cpp  renderer.hpp  scaling_manager.cpp  scaling_manager.hpp  scripting.cpp  scripting_experiments_refactored.cpp  stress_test.cpp  ui_dashboard.cpp  ui_dashboard.hpp
src/common/: CMakeLists.txt
src/common/network/: handshake.hpp  interpolator.hpp  manager.cpp  protocol.hpp
src/common/security/: xor_cipher.hpp
src/scripts/: W3M_CombatSync.ws  W3M_NarrativeSync.ws
src/server/: server.cpp
tools/: README.md
